Changelog for Writer2LaTeX version 1.0 -> 1.2

---------- version 1.1.8 ----------

[w2x] The EPUB export now supports additional resource files (e.g. images, fonts) to the custom style sheet
  - using the readResource method of the converter API
  - using the -resource method of the command line application
  - using the ResourceURL or Resources property of the filter API
  - by specifying the resource files in a custom configuration

[all] API change: Added the method readResource to the Converter interface (only used by EPUB export currently) 

[w2x] Crossed out headings are ignored in EPUB export, but retained in the external toc

[all] Added Farsi translation from Mostafa Barmshory

[w2l] Added support for xepersian.sty (fa_IR locale, requires XeTeX backend and multilingual=true)

---------- version 1.1.7 ----------

[all] Bugfix: Fixed null pointer exception for tables with unbalanced rows

[w2l] Added the attribute break-after to paragraph style maps with values none, line and par (default)

[w2x] Bugfix: Positioning of text boxes (left, right, center, floating) now works correctly 

[w2x] Support the value "biggest" for the style:wrap attribute

[w2l] Bugfix: No longer creates run-in headings if bottom margin is zero and formatting>=convert_most

[all] Filter bugfix: Do not exclude surrogate pairs

[w2l] Bugfix: Fixed indentation problem with lists after tables if formatting>=convert_most

[w2l] Bugfix: Lists in tables are now exported as standard lists even if formatting>=convert_most

[w2l] Bugfix: Corrected export of centered and right justified paragraphs in tables

[w2x] Renamed the option original_image_size to image_size with extended values: absolute (default, former false),
  relative (new value: Export images and text boxes using relative width, i.e. as a percentage of the current text width)
  and none/original_image_size (former true). The old option name is still recognized.
